# akili-core

./: .env.example  .gitignore  .replit  CONTRIBUTING.md  README.md  dashboard.py  main.py  pyproject.toml  replit.md  replit.nix  requirements.txt  test_apis.py  test_system.py
agents/: amplify.py  creova_media.py  intel.py  pulse.py  reach.py  shield.py
api/: handlers.py
attached_assets/: API_SETUP_GUIDE_1775234883680.md  CREOVA_Automation_OS_1780376277654.html  MEMORY_1775196466578.md  PHASE3_SETUP_1775265227613.md  Pasted-22-120-Terms-of-Service-URL-Link-to-your-app-or-website_1775261763392.txt  SECRETS_GUIDE_1775234825051.md  SETUP_1775196466579.md  __init___1775196445007.py  __init___1775196455850.py  __init___1775234810184.py  accounts_1775234801170.py  akili_ai_architecture_1775196525882.html  akili_ai_architecture_1775196551230.html  akili_phase2_roadmap_1775232833147.html  amplify_1775196445008.py  facebook_1775234810184.py  github_monitor_1775234843852.py  gmail_1775234810184.py  instagram_1775234810184.py  intel_live_1775265219499.py  linkedin_1775234810184.py  main_1775196450605.py  main_1775265214964.py  manager_1775196455850.py  pulse_1775196445008.py  pulse_scheduler_1775265219500.py  reach_1775196445008.py  reach_autoresponder_1775265219500.py  requirements_1775234932817.txt  requirements_1775265214964.txt  server_1775265208228.py  shield_1775196445009.py  snapchat_1775234810185.py  tiktokZOEgJ9JW9DI1DsSJngcQTHQLHJcMe7Ob_1775262623125.txt  tiktok_1775234810185.py  tiktokaHf1VfnFwjWRPOBbozZMasw01mjw4Emn_1775260565434.txt  twitter_1775234810185.py
(+30 files in other folders)
