[project]
name = "akili-ai"
version = "0.1.0"
description = "AKILI — Autonomous AI OS for the CREOVA ecosystem"
authors = ["Justin Mafie <justin@creova.one>"]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-telegram-bot>=21.0",
    "aiohttp>=3.9.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
]
